<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ResultsActivity"
    tools:showIn="@layout/activity_results">

    <TextView
        android:id="@+id/results_tv_height"
        android:text="@string/height_label_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Results_tv" />

    <TextView
        android:id="@+id/results_tv_weight"
        android:text="@string/weight_label_text"
        app:layout_constraintEnd_toEndOf="@+id/results_tv_height"
        app:layout_constraintStart_toStartOf="@+id/results_tv_height"
        app:layout_constraintTop_toBottomOf="@+id/results_tv_height"
        style="@style/Results_tv" />

    <TextView
        android:id="@+id/results_tv_BMI"
        android:text="@string/BMI"
        app:layout_constraintEnd_toEndOf="@+id/results_tv_weight"
        app:layout_constraintStart_toStartOf="@+id/results_tv_weight"
        app:layout_constraintTop_toBottomOf="@+id/results_tv_weight"
        style="@style/Results_tv" />

    <TextView
        android:id="@+id/results_tv_BMI_Group"
        android:text="@string/BMI_Group"
        app:layout_constraintEnd_toEndOf="@+id/results_tv_BMI"
        app:layout_constraintStart_toStartOf="@+id/results_tv_BMI"
        app:layout_constraintTop_toBottomOf="@+id/results_tv_BMI"
        style="@style/Results_tv" />

</androidx.constraintlayout.widget.ConstraintLayout>